Add vulnerability checking, update dogfooding section

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           go-version-file: 'go.mod'
 
+      - run: go install golang.org/x/vuln/cmd/govulncheck@latest
       - run: go vet ./...
+      - run: govulncheck ./...
       - run: go build ./...
       - run: go test ./... -count=1
