--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,6 +3,8 @@ pre-commit:
   commands:
     vet:
       run: go vet ./...
+    vulncheck:
+      run: govulncheck ./...
     build:
       run: go build ./...
     test:
